# django-rest-errors

./: .gitignore  README.md  manage.py  requirements.txt
django_error_codes/: asgi.py  settings.py  urls.py  wsgi.py
error_codes/: admin.py  functions.py  ownexceptions.py  urls.py
error_codes/docs/: views.py
error_codes/templates/: base.html  index.html
src_error_codes/: LICENSE.txt  MANIFEST.in  README.rst  setup.cfg
src_error_codes/UNKNOWN.egg-info/: SOURCES.txt
src_error_codes/django_rest_error.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src_error_codes/error_codes/: admin.py  apps.py  exceptions.py  functions.py  models.py  serializer.py  urls.py
src_error_codes/error_codes/docs/: views.py
src_error_codes/error_codes/migrations/: 0001_initial.py
src_error_codes/error_codes/templates/: details_category.html  details_errors_codes.html  index.html  not_found.html  search.html
