[metadata]
name = django-rest-error
version = 1.0.1
description = A Django app to manage errors in your api
long_description = file: README.rst
description_content_type=text/x-rst,
url = https://github.com/RoodrigoRoot/django-rest-errors
author = Roodrigo root
author_email = roodrigoroot@gmail.com
license = MIT # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0
    Django <= 4.0  # Replace "X.Y" as appropriate